@@ -1,4 +1,4 @@
 uqm_SUBDIRS="sdl"
 uqm_CFILES="boxint.c clipline.c cmap.c context.c drawable.c filegfx.c
 		font.c frame.c gfx_common.c intersec.c loaddisp.c
-		pixmap.c resgfx.c tfb_draw.c tfb_prim.c"
+		pixmap.c resgfx.c tfb_draw.c tfb_prim.c widgets.c"
